Some refactoring, add activation condition support.